--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@rollup/plugin-replace": "^3.0.0",
     "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
+    "@tailwindcss/typography": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "autoprefixer": "^10.4.4",
